# stock_prediction_api

./: .gitignore  .travis.yml  Dockerfile  LICENSE  Makefile  Pipfile  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py  stock_prediction_api.ipynb  stock_predictor_api_test.ipynb  tox.ini
.github/: ISSUE_TEMPLATE.md  cicd.yml
.github/workflows/: cicd.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/app/: main.py
src/stock_prediction_api/: __init__.py  cli.py
src/stock_prediction_api/app/: model.py
stock_prediction_api/: model.py
stock_prediction_api/app/: main.py
tests/: __init__.py  test_sample.py  test_stock_prediction_api.py
