[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stock_prediction_api"
version = "0.1.0"
description = "Stock Prediction API to predict stock prices"
readme = "README.rst"
authors = [
  {name = "krish", email = "audreyr@example.com"}
]
maintainers = [
  {name = "krish", email = "audreyr@example.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/ronykris/stock_prediction_api/issues"
changelog = "https://github.com/ronykris/stock_prediction_api/blob/master/changelog.md"
homepage = "https://github.com/ronykris/stock_prediction_api"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

